--- a/package.json
+++ b/package.json
@@ -11,25 +11,24 @@
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/native-stack": "^6.9.17",
     "@supabase/supabase-js": "^2.38.4",
     "@types/react": "~18.2.14",
-    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-app-loading": "^2.1.1",
-    "expo-splash-screen": "~0.20.5",
     "expo-font": "~11.4.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "phosphor-react-native": "^2.0.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-elements": "^3.4.3",
-    "react-native-url-polyfill": "^2.0.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.0.1",
     "styled-components": "^6.1.0",
-
     "typescript": "^5.1.3"
-
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
